<resources>
    <string name="app_name">calculatrice_achraf.ladhari</string>
    <string name="Res">Résultat..</string>
    <string name="btn0">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btnc">C</string>
    <string name="btnpls">+</string>
    <string name="btnmoins">-</string>
    <string name="btnfoi">*</string>
    <string name="btndiv">/</string>
    <string name="btnver">.</string>
    <string name="btnegl">=</string>
    <string name="btnfact">!</string>
</resources>