<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >
    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50px"
        android:background="@color/teal_200"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textSize="50px"
        android:layout_gravity="center">

    </TextView>
    <EditText
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Res"
        android:layout_gravity="center"
        android:layout_marginTop="100px">
    </EditText>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >

        <Button
            android:id="@+id/btn1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="100px"
            android:text="@string/btn1">
        </Button>
        <Button
            android:id="@+id/btn2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn2"
            android:layout_marginLeft="20px"
            android:layout_marginTop="100px"
            >
        </Button>

        <Button
            android:id="@+id/btn3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn3"
            android:layout_marginLeft="20px"
            android:layout_marginTop="100px">
        </Button>
        <Button
            android:id="@+id/btnpls"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnpls"
            android:layout_marginLeft="30px"
            android:layout_marginTop="100px"></Button>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20px">
        <Button
            android:id="@+id/btn4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn4">
        </Button>
        <Button
            android:id="@+id/btn5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn5"
            android:layout_marginLeft="20px"
            >
        </Button>

        <Button
            android:id="@+id/btn6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn6"
            android:layout_marginLeft="20px"
            >
        </Button>
        <Button
            android:id="@+id/btnmoins"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnmoins"
            android:layout_marginLeft="30px"
           ></Button>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20px">
        <Button
            android:id="@+id/btn7"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="@string/btn7">
        </Button>
        <Button
            android:id="@+id/btn8"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn8"
            android:layout_marginLeft="20px"
            >
        </Button>

        <Button
            android:id="@+id/btn9"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn9"
            android:layout_marginLeft="20px"
            >
        </Button>
        <Button
            android:id="@+id/btnfoi"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnfoi"
            android:layout_marginLeft="30px"
            ></Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="20px">
    <Button
        android:id="@+id/btn0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btn0">
    </Button>
    <Button
        android:id="@+id/btnpnt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btnver"
        android:layout_marginLeft="20px"
        >
    </Button>

    <Button
        android:id="@+id/btnc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btnc"
        android:layout_marginLeft="20px"
        >
    </Button>
    <Button
        android:id="@+id/btndiv"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btndiv"
        android:layout_marginLeft="30px"
        ></Button>
    </LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center">

    <Button
        android:id="@+id/egale"
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30px"
        android:layout_weight="1"
        android:text="@string/btnegl"></Button>

    <Button
        android:id="@+id/fact"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30px"
        android:layout_weight="1"
        android:text="@string/btnfact"></Button>
</LinearLayout>
</LinearLayout>